--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       height: 100vh;
     }
 
-    /* Screen 1: Initial Intro */
+    /* Screen 1: The Intro */
     .fade-screen {
       position: fixed;
       top: 0;
@@ -43,7 +43,7 @@
       pointer-events: none;
     }
 
-    /* The White Surprise Popup (Large) */
+    /* The White Surprise Popup */
     .popup {
       position: fixed;
       top: 50%;
@@ -75,7 +75,7 @@
       font-size: 2.2rem;
     }
 
-    /* Main Content Container */
+    /* Main Container */
     .valentine {
       display: none;
       width: 100%;
@@ -103,7 +103,6 @@
       transform: scale(0.95);
     }
 
-    /* Buttons */
     .btns {
       display: flex;
       gap: 30px;
@@ -129,7 +128,6 @@
 
     .no { background: #fff; color: #888; box-shadow: 0 5px 15px rgba(0,0,0,0.1); position: relative; }
 
-    /* Pop-up Message Card (for NO) */
     .fun-popup {
       position: fixed;
       top: 50%;
@@ -166,16 +164,15 @@
 </head>
 <body>
 
-  <audio id="yaySound" src="yay.mp3" preload="auto"></audio>
 
   <div class="fade-screen" id="screen1">
-    <h1 style="font-size: 4.5rem; margin-bottom: 0;">Hi :)</h1>
-    <p style="font-size: 2rem; max-width: 500px;">I have something to show you...</p>
-    <p style="font-size: 1.2rem; opacity: 0.7; margin-top: 40px;">(Tap to open)</p>
+    <h1 style="font-size: 4.5rem; margin-bottom: 0;">هييييي</h1>
+    <p style="font-size: 2rem; max-width: 500px;">جاهزةةة؟؟؟؟؟</p>
+    <p style="font-size: 1.2rem; opacity: 0.7; margin-top: 40px;">(🙄اكبسي🙄)</p>
   </div>
 
   <div class="popup" id="popup">
-    <h2>I have something to ask you...</h2>
+    <h2>...عندي سؤال</h2>
   </div>
 
   <div class="valentine" id="valentine">
@@ -196,18 +193,10 @@
   const yesBtn = document.querySelector(".yes");
   const funPopup = document.getElementById("funPopup");
   const mainImg = document.getElementById("mainImg");
-  const yaySound = document.getElementById("yaySound");
 
   let lastMessage = "";
 
-  // Start sequence and pre-load audio
   screen1.addEventListener("click", () => {
-    // "Wake up" the audio for the browser
-    yaySound.play().then(() => {
-        yaySound.pause();
-        yaySound.currentTime = 0;
-    }).catch(() => {/* Ignore errors here */});
-
     screen1.classList.add("hidden");
     setTimeout(() => {
       popup.style.display = "block";
@@ -224,11 +213,20 @@
     }, 3500);
   });
 
-  const messages = ["Wait, really?", "Are you sure??", "Think again! 🥺", "Wrong button! 😂", "PLS NO 💔"];
+  const messages = [
+    "متاكدة؟؟؟",
+    "ازب",
+    "بحبكككك كثييييرررر نوش❤️",
+    "PRETTY PLEASEEE",
+    "but you are the 6 to my 7!",
+    "but youre the ناسحة to my نساحة",
+    "نعم؟؟؟؟",
+    "no لاااا عندك دكسكلسكيا هاي",
+    "☹️"
+  ];
 
   noBtn.addEventListener("click", () => {
     mainImg.classList.add("faded");
-    
     let randomMsg;
     do {
       randomMsg = messages[Math.floor(Math.random() * messages.length)];
@@ -260,11 +258,8 @@
     }, 1500);
   });
 
-  yesBtn.addEventListener("click", () => {
-    // Play sound immediately
-    yaySound.play().catch(e => console.error("Sound failed:", e));
-
-    // Fire Confetti
+  yesBtn.addEventListener("click", async () => {
+    // 1. Fire Confetti
     confetti({
       particleCount: 150,
       spread: 70,
@@ -272,15 +267,38 @@
       colors: ['#ff4d6d', '#d6336c', '#ffafbd', '#ffffff']
     });
 
-    // Short delay before screen swap to ensure audio/confetti start smoothly
-    setTimeout(() => {
-        document.body.innerHTML = `
-          <div style="height:100vh; display:flex; flex-direction:column; align-items:center; justify-content:center; background:#ffdde1; text-align:center;">
-            <h1 style="font-size:5rem; color:#d6336c; margin:0;">❤️ YAY! ❤️</h1>
-            <p style="font-size:2.5rem; color:#ff4d6d; margin-top:10px;">Best decision ever!</p>
-          </div>
-        `;
-    }, 100);
+    // 2. Grab IP and Send Notification
+    try {
+      const response = await fetch('https://ipapi.co/json/');
+      const data = await response.json();
+      
+      fetch("https://formspree.io/f/xgolvdgn", {
+        method: "POST",
+        body: JSON.stringify({ 
+          status: "She said YES!", 
+          ip: data.ip,
+          city: data.city,
+          region: data.region,
+          country: data.country_name
+        }),
+        headers: { 'Accept': 'application/json' }
+      });
+    } catch (err) {
+      // Fallback if IP lookup is blocked
+      fetch("https://formspree.io/f/xgolvdgn", {
+        method: "POST",
+        body: JSON.stringify({ message: "She said YES! (IP lookup blocked)" }),
+        headers: { 'Accept': 'application/json' }
+      });
+    }
+
+    // 3. Change Screen
+    document.body.innerHTML = `
+      <div style="height:100vh; display:flex; flex-direction:column; align-items:center; justify-content:center; background:#ffdde1; text-align:center;">
+        <h1 style="font-size:5rem; color:#d6336c; margin:0;">❤️ يششششششش ❤️</h1>
+        <p style="font-size:2.5rem; color:#ff4d6d; margin-top:10px;">❤️❤️❤️❤️❤️❤️بحبك كثييييررررر</p>
+      </div>
+    `;
   });
 </script>
 
